Added something in about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,8 @@
     <body>
         <div class="main-content">
         {{>header}}
+
+        <p>This site was created by Ruthvik .It uses data from weatherstack.com </p>
         <img src="images/suite.JPG" class="portrait">
         </div>
         {{>footer}}
